--- a/BGInfoPortal/templates/index.html
+++ b/BGInfoPortal/templates/index.html
@@ -3,7 +3,7 @@
     <h1>BG Info portal </h1>
     <div class="jumbotron vertical-center media-body">
         <div class="content-section">
-                    <p>BG Info portal e специализиран новинарски агрегатор, който събира на едно място най-интересните
+                    <p>BG Info Portal e специализиран новинарски агрегатор, който събира на едно място най-интересните
                     новини от водещите български онлайн издания. Събраните новини са разделени по тема в следните
                     категории:
                     <ul>
