--- a/BGInfoPortal/templates/index.html
+++ b/BGInfoPortal/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>BG Info portal </h1>
+    <h1>BG Info Portal </h1>
     <div class="jumbotron vertical-center media-body">
         <div class="content-section">
                     <p>BG Info Portal e специализиран новинарски агрегатор, който събира на едно място най-интересните
